components/demo/label-studio/db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-uri: https://github.com/redhat-na-ssa/demo-ocp-label-studio.git
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"postgresql:12","namespace":"openshift"},"fieldPath":"spec.template.spec.containers[?(@.name==\"postgresql\")].image","pause":"true"}]'
    template.alpha.openshift.io/wait-for-ready: "true"
  labels:
    app: label-studio
    app.kubernetes.io/part-of: label-studio
    template: postgresql-persistent-template
    template.openshift.io/template-instance-owner: 84530ce1-22cb-411e-b4f1-d297468b0153
  name: label-studio-db
spec:
  replicas: 1
  selector:
    matchLabels:
      name: label-studio-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: label-studio-db
    spec:
      containers:
      - env:
        - name: POSTGRESQL_USER
          valueFrom:
            secretKeyRef:
              key: database-user
              name: label-studio-db
        - name: POSTGRESQL_PASSWORD
          valueFrom:
            secretKeyRef:
              key: database-password
              name: label-studio-db
        - name: POSTGRESQL_DATABASE
          valueFrom:
            secretKeyRef:
              key: database-name
              name: label-studio-db
        - name: POSTGRESQL_ADMIN_PASSWORD
          valueFrom:
            secretKeyRef:
              key: database-password
              name: label-studio-db
        image: image-registry.openshift-image-registry.svc:5000/openshift/postgresql:12
        livenessProbe:
          exec:
            command:
            - /usr/libexec/check-container
            - --live
          failureThreshold: 3
          initialDelaySeconds: 120
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        name: postgresql
        ports:
        - containerPort: 5432
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - /usr/libexec/check-container
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
        - mountPath: /var/lib/pgsql/data
          name: db-data
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: label-studio-db
