components/demo/label-studio/deploy-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: label-studio
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: "false"
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"label-studio:ubi_patched"},"fieldPath":"spec.template.spec.containers[?(@.name==\"label-studio\")].image","pause":"false"}]'
  labels:
    app: label-studio
    app.kubernetes.io/component: label-studio
    app.kubernetes.io/instance: label-studio
    app.kubernetes.io/name: label-studio
    app.kubernetes.io/part-of: label-studio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: label-studio
      deployment: label-studio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: label-studio
        deployment: label-studio
    spec:
      containers:
      - env:
        - name: DJANGO_DB
          value: default
        - name: POSTGRE_NAME
          valueFrom:
            secretKeyRef:
              key: database-name
              name: label-studio-db
        - name: POSTGRE_USER_NOPE
          valueFrom:
            secretKeyRef:
              key: database-user
              name: label-studio-db
        - name: POSTGRE_PASSWORD
          valueFrom:
            secretKeyRef:
              key: database-password
              name: label-studio-db
        - name: POSTGRE_PORT
          value: "5432"
        - name: POSTGRE_HOST
          value: label-studio-db
        - name: JSON_LOG
          value: "1"
        - name: POSTGRE_USER
          value: postgres
        image: label-studio:ubi_patched
        name: label-studio
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - mountPath: /label-studio/.local
          name: label-studio-data
          subPath: .local
        - mountPath: /label-studio/data
          name: label-studio-data
          subPath: data
      volumes:
      - name: empty
        emptyDir: {}
      - name: label-studio-data
        persistentVolumeClaim:
          claimName: label-studio-data
