components/demo/label-studio/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: label-studio
  annotations:
    app.openshift.io/vcs-ref: openshift
    app.openshift.io/vcs-uri: https://github.com/redhat-na-ssa/demo-ocp-label-studio.git
  labels:
    app: label-studio
    app.kubernetes.io/component: label-studio
    app.kubernetes.io/instance: label-studio
    app.kubernetes.io/name: label-studio
    app.kubernetes.io/part-of: label-studio
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: 3.9-ubi8
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: label-studio
    deployment: label-studio
  sessionAffinity: None
  type: ClusterIP
